--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,29 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-# created-by: conda 24.9.2
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-annotated-types=0.7.0=pypi_0
-anyio=4.8.0=pypi_0
-ca-certificates=2025.2.25=h06a4308_0
-certifi=2025.1.31=pypi_0
-charset-normalizer=3.4.1=pypi_0
-decorator=4.4.2=pypi_0
-distro=1.9.0=pypi_0
-exceptiongroup=1.2.2=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.7=pypi_0
-httpx=0.28.1=pypi_0
-idna=3.10=pypi_0
-imageio=2.37.0=pypi_0
-imageio-ffmpeg=0.6.0=pypi_0
-jiter=0.8.2=pypi_0
-ld_impl_linux-64=2.40=h12ee557_0
-libffi=3.4.4=h6a678d5_1
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-moviepy=1.0.3=pypi_0
-ncurses=6.4=h6a678d5_0
-numpy=2.0.2=pypi_0
-openai=1.64.0=pypi_0
-openssl=3.0.15=h5eee18b_0
-pillow=10.4.0=pypi_0
-pip=25.0=py39h06a4308_0
-proglog=0.1.10=pypi_0
-pydantic=2.10.6=pypi_0
-pydantic-core=2.27.2=pypi_0
-python=3.9.21=he870216_1
-python-dotenv=1.0.1=pypi_0
-pytube=15.0.0=pypi_0
-pytubefix=8.12.2=pypi_0
-readline=8.2=h5eee18b_0
-requests=2.32.3=pypi_0
-setuptools=75.8.0=py39h06a4308_0
-sniffio=1.3.1=pypi_0
-sqlite=3.45.3=h5eee18b_0
-tk=8.6.14=h39e8969_0
-tqdm=4.67.1=pypi_0
-typing-extensions=4.12.2=pypi_0
-tzdata=2025a=h04d1e81_0
-urllib3=2.3.0=pypi_0
-wheel=0.45.1=py39h06a4308_0
-xz=5.6.4=h5eee18b_1
-zlib=1.2.13=h5eee18b_1
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+decorator==4.4.2
+distro==1.9.0
+exceptiongroup==1.2.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+jiter==0.8.2
+moviepy==1.0.3
+numpy==2.0.2
+openai==1.64.0
+pillow==10.4.0
+proglog==0.1.10
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+pytube==15.0.0
+pytubefix==8.12.2
+requests==2.32.3
+sniffio==1.3.1
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
