--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ moviepy==1.0.3
 numpy==2.0.2
 openai==1.64.0
 pillow==10.4.0
+pip==25.0
 proglog==0.1.10
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -23,7 +24,9 @@ python-dotenv==1.0.1
 pytube==15.0.0
 pytubefix==8.12.2
 requests==2.32.3
+setuptools==75.8.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+wheel==0.45.1
